update file structure

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,8 @@
 <body>
     <div style="width: 400px;">
         <h1>Bookmark URL</h1>
-        <input id="link_url" type="text" value="" style="width: 95%;">
+        <h4 id="link_url" style="width: 95%">Test</h4>
+        <button id="add_bookmark">Add Bookmark</button>
     </div>
 
 
