--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,11 +4,18 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 
-<body>
-    <div style="width: 400px;">
+<body class="m-0">
+    <div style="width: 400px;" class="border px-3 pb-3 m-0">
         <h1>Bookmark URL</h1>
-        <h4 id="link_url" style="width: 95%">Test</h4>
-        <button id="add_bookmark">Add Bookmark</button>
+        <span id="link_url" class="word-break">Unknown</span>
+        <div class="row mt-3">
+            <div class="column">
+                <button id="add_bookmark">Add Bookmark</button>
+            </div>
+            <div class="column text-right">
+                <button id="copy_bookmark">Copy Bookmark</button>
+            </div>
+        </div>
     </div>
 
 
