added signin with calls to API to fetch token

--- a/popup/bookmark.html
+++ b/popup/bookmark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="bookmark.css">
 </head>
 
 <body class="m-0">
@@ -19,6 +19,6 @@
     </div>
 
 
-    <script src="popup.js"></script>
+    <script src="bookmark.js"></script>
 </body>
 </html>
