--- a/popup/bookmark.html
+++ b/popup/bookmark.html
@@ -4,9 +4,18 @@
     <link rel="stylesheet" href="bookmark.css">
 </head>
 
+<!--
+
+Add a logout icon
+Pull in list of buckets
+Write logic to post bookmark to api
+
+-->
+
+
 <body class="m-0">
-    <div style="width: 400px;" class="border px-3 pb-3 m-0">
-        <h1>Bookmark URL</h1>
+    <div class="border p-3 m-0">
+        <h1 class="my-1">Bookmark URL</h1>
         <span id="link_url" class="word-break">Unknown</span>
         <div class="row mt-3">
             <div class="column">
