--- a/popup/sign-in.html
+++ b/popup/sign-in.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+    <h1 class="my-1">Sign In</h1>
     <form>
         <input type="email" name="email" id="email" placeholder="Email">
         <input type="password" name="password" id="password" placeholder="Password">
-        <button type="submit">Sign In</button>
+        <button type="submit">Login</button>
     </form>
     <script src="./sign-in.js"></script>
 </body>
