--- a/popup/sign-in.html
+++ b/popup/sign-in.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="sign-in.css">
+    <link rel="stylesheet" href="../css/sign-in.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <input type="password" name="password" id="password" placeholder="Password">
         <button type="submit">Login</button>
     </form>
-    <script src="./sign-in.js"></script>
+    <script src="../js/sign-in.js"></script>
 </body>
 
 </html>
