added description and more styling

--- a/popup/bookmark.html
+++ b/popup/bookmark.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/bookmark.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Save Bookmark</title>
+    <link rel="stylesheet" href="../css/links.css">
     <!--<link rel="stylesheet" href="../css/fontawesome.css">-->
     <link href="../lib/fontawesome/css/all.css" rel="stylesheet">
 </head>
 
-<body class="m-0">
+<body class="m-0 bookmark">
     <div class="border p-3 m-0">
         <div class="row">
             <div class="column-80">
-                <h1 class="my-1">Add a Bookmark</h1>
+                <h1 class="my-1">Bookmark This Page!</h1>
             </div>
             <div class="column-20 text-right">
-                <button id="logout" title="Logout"><i class="fa fa-sign-out fa-xs"></i></button>
+                <button id="copy_bookmark" class="p-1" title="Copy to Clipboard"><i class="fa fa-clipboard"></i></button>
+                <button id="logout" class="p-1" title="Logout"><i class="fa fa-sign-out fa-xs"></i></button>
             </div>
         </div>
 
@@ -21,23 +25,31 @@
 
         <div class="row my-3" id="display_name">
             <div class="column-100">
-                <input type="text" id="link_name" class="m-0 p-2" value="Test">
+                <input type="text" id="link_name" class="m-0 p-2 bookmark" value="Test"><br/>
+                <small class="ml-2 strong">Name</small>
             </div>
         </div>
 
-        <!--<h3 id="link_name" class="word-break my-2"></h3>-->
-        <span id="link_url" class="word-break"></span>
-        <div class="row mt-3">
-            <div class="column-80">
-                <select id="link_bucket" class="mr-2 p-1" name="bucket">
-                    <option value="">-- Select Bucket --</option>
-                </select>
-                <button id="add_bookmark"><i class="fa fa-plus mr-1"> </i> Add</button>
-            </div>
-            <div class="column-20 text-right">
-                <button id="copy_bookmark" class="p-1" title="Copy to Clipboard"><i class="fa fa-clipboard"></i></button>
+        <span id="link_url" class="word-break" style="display:none;"></span>
+
+        <div class="row mt-3" id="display_description">
+            <div class="column-100">
+                <textarea id="link_description" name="description" rows="3"></textarea><br/>
+                <small class="ml-2 strong">Notes</small>
             </div>
         </div>
+
+        <div class="row mt-3" id="display_bucket">
+            <div class="column-80">
+                <select id="link_bucket" class="mr-2 p-1" name="bucket">
+                    <option value="">-- Bucket --</option>
+                </select>
+            </div>
+            <div class="column-20 text-right">
+                <button id="add_bookmark" class="btn btn-info btn-sm"><i class="fa fa-plus mr-1"> </i> Save</button>
+            </div>
+        </div>
+
     </div>
 
 
