error handling for failed logins

--- a/popup/sign-in.html
+++ b/popup/sign-in.html
@@ -18,6 +18,8 @@
             </div>
         </div>
 
+        <div id="errors" class="word-break"></div>
+
         <form>
             <div class="row my-3">
                 <div class="column-50">
