--- a/popup/bookmark.html
+++ b/popup/bookmark.html
@@ -30,8 +30,6 @@
             </div>
         </div>
 
-        <span id="link_url" class="word-break" style="display:none;"></span>
-
         <div class="row mt-3" id="display_description">
             <div class="column-100">
                 <textarea id="link_description" name="description" rows="3"></textarea><br/>
@@ -47,6 +45,13 @@
             </div>
             <div class="column-20 text-right">
                 <button id="add_bookmark" class="btn btn-info btn-sm"><!--<i class="fa fa-plus mr-1"> </i> -->Save</button>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="column-100">
+                <hr/>
+                <span id="link_url" class="mt-2 word-break"></span>
             </div>
         </div>
 
